added images for ct_tank section

--- a/Thesis/data_extraction/ct_tank.tex
+++ b/Thesis/data_extraction/ct_tank.tex
@@ -1,3 +1,18 @@
 
-\subsection{section 1}
-This is ct tank extraction
+\subsection{CT Scan overview, target surfaces}
+\begin{figure}[htb]
+  \begin{minipage}[t]{2.75in}
+    \centering
+    \centerline{\mbox{\includegraphics[width=2.75in]{data_extraction/images/ct_coronal_mid_slice.eps}}}
+    \centerline{\emph{(a) Coronal view, center slice}}
+  \end{minipage}\medskip
+  \begin{minipage}[t]{2.75in}
+    \centering
+    \centerline{\mbox{\includegraphics[width=2.75in]{data_extraction/images/ct_coronal_mid_slice_marked_surface.eps}}}
+    \centerline{\emph{(b) Marked target surfaces}}
+  \end{minipage}
+\end{figure}
+
+\subsection{Simple Canny}
+
+
