--- a/Thesis/data_extraction/data_extraction.tex
+++ b/Thesis/data_extraction/data_extraction.tex
@@ -1,5 +1,5 @@
 
 
-\section{CT images tank distance measurement}
+\section{Water Tank Distance Measurement Extraction}
 \label{ct_tank}
 \input{data_extraction/ct_tank}
