--- a/Thesis/data_extraction/data_extraction.tex
+++ b/Thesis/data_extraction/data_extraction.tex
@@ -1,5 +1,14 @@
+\section{Introduction}
+In order for our estimation to work we need to collect two different types of data for our calculations. 
+One is the true geometric dimension of our phantom, the other is the corresponding distorted signal that
+represent those known geometric locations inside MR images. Some of these data can be relied on manufacture's
+measurement, while others would require us to extract information from various types of images to estimate the
+measurements. In this chapter we will discuss how we obtain each measurements and algorithm involved in those
+processes.
 
+\section{Tubes}
+\label{tubes}
 
-\section{Water Tank Distance Measurement Extraction}
+\section{Water Tank}
 \label{ct_tank}
 \input{data_extraction/ct_tank}
