--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -2,6 +2,7 @@
 \usepackage{graphicx}
 \usepackage{listings}
 \usepackage{color} % color
+\usepackage{amsmath}
 \definecolor{listinggray}{gray}{0.9}
 
 % \IncludeFig{caption}{label}{file}{scale}
@@ -62,6 +63,9 @@
 
 \Chapter{Overview}
 \label{overview}
+
+% algorithm overviews
+% canny, peakdet, etc
 
 \Chapter{Phantom Design}
 \label{phantom_design}
