note on where to continue

--- a/Thesis/data_extraction/ct_tank.tex
+++ b/Thesis/data_extraction/ct_tank.tex
@@ -202,7 +202,10 @@ Upper pair of arrows in figure \ref{fig:coronal_270_boundary_histogram} indicate
 the phantom tanks are, and the lower pair of arrows indicates how do those edges shows up in its gradient graph.
 The two small edges are identifiable with properties of value bewteen 200 and 1000. We can identify them with
 this property for most of the sliceds. The transition from phantom tank to water become smoother on the slices
-more toward anterior or posterior in coronal view. However, with the slices that able to identify the edges,
+more toward anterior or posterior in coronal view. 
+
+==> modify here
+However, with the slices that able to identify the edges,
 we can reconstruct majority of each water tank surface and they are more than enough for us to estimate the
 distances between each surfaces, especially with the assumption that they are all flat and parallel to each
 other.
@@ -297,7 +300,9 @@ while others not.
   \label{fig:coronal_270_intermediate_results}
 \end{figure}
 
-\subsubsection{Result}
+\subsubsection{Improvement}
+
+
 
 \begin{figure}[htb]
   \begin{minipage}[t]{2.75in}
