--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -69,6 +69,7 @@
 
 \Chapter{Phantom Design}
 \label{phantom_design}
+\input{phantom/phantom_design}
 
 \Chapter{Data Extraction}
 \label{data_extraction}
