MRI tank left right boundary detection works for exterior tank inside surface

--- a/Thesis/data_extraction/data_extraction.tex
+++ b/Thesis/data_extraction/data_extraction.tex
@@ -12,3 +12,7 @@ processes.
 \section{Water Tank}
 \label{ct_tank}
 \input{data_extraction/ct_tank}
+
+\section{Water Tank MRI}
+\label{mri_tank}
+\input{data_extraction/mri_tank}
